<resources>
    <string name="app_name">星座占い</string>
    <string name="constellation_choose_button">星座を選択</string>
    <string name="constellation_text">星座が選択されていません</string>
    <string name="constellation_accept_button">星座を確定</string>
    <string name="constellation_toast_message">星座を選択後、確定してください</string>

    <string name="rank_title">今日の星座順位</string>
    <string name="user_rank">%1$sのあなたは...\n今日は%2$d位です！</string>

    <string name="sample_rank_text">順位</string>>
    <string name="sample_constellation_text">星座</string>>

    <string name="today_constellation_text">今日の第%1$s位の%2$s！</string>
    <string name="today_a_word_title">今日の一言</string>
    <string name="today_a_word_text_sample">sample</string>
    <string name="total_title_text">総合運</string>
    <string name="love_title_text">恋愛運</string>
    <string name="money_title_text">金運</string>
    <string name="work_title_text">仕事運</string>
    <string name="health_title_text">健康運</string>
    <string name="lucky_color_title">ラッキーカラー</string>
</resources>
